setup podcastArrayAdapter for the Choose activity gridView of podcasts

--- a/DestinyCasts/app/src/main/res/layout/activity_choose_intro.xml
+++ b/DestinyCasts/app/src/main/res/layout/activity_choose_intro.xml
@@ -34,8 +34,18 @@
 
     </LinearLayout>
 
+    <GridView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/podcastGridView"
 
-
+        android:columnWidth="90dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"
+        />
 
 
 </LinearLayout>
