--- a/DestinyCasts/app/src/main/res/layout/podcast_list_view.xml
+++ b/DestinyCasts/app/src/main/res/layout/podcast_list_view.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/podcastImageView"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="centerCrop"/>
+
     <TextView
         android:id="@+id/podcastTitleTextView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="podcast_item"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_below="@id/podcastImageView"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:singleLine="false"
+        android:textSize="18sp" />
+</RelativeLayout>
 
-</FrameLayout>
