--- a/DestinyCasts/app/src/main/res/layout/episode_list_view.xml
+++ b/DestinyCasts/app/src/main/res/layout/episode_list_view.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/episodeContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,5 +50,3 @@
 
 
     </LinearLayout>
-
-</LinearLayout>
