--- a/DestinyCasts/app/src/main/res/layout/content_episode.xml
+++ b/DestinyCasts/app/src/main/res/layout/content_episode.xml
@@ -83,6 +83,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/playerCurrentTrackPosition"
             android:layout_alignParentStart="true"
+            android:text="@string/trackStartTime"
             tools:text="00:00"/>
 
         <TextView
