--- a/DestinyCasts/app/src/main/res/layout/player_notification.xml
+++ b/DestinyCasts/app/src/main/res/layout/player_notification.xml
@@ -1,7 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="#999"
 
-</LinearLayout>
+    >
+
+    <ImageView
+        android:id="@+id/episodeNotficationImageView"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/episode_image"
+        android:layout_alignParentLeft="true"
+        tools:src="@drawable/destiny_the_show"/>
+
+
+    <TextView
+        android:id="@+id/notificationEpisodeName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="April update is upon us"
+        android:textColor="#000"
+        android:layout_toRightOf="@id/episodeNotficationImageView"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="8dp"
+        android:textSize="18sp"
+        />
+
+    <TextView
+        android:id="@+id/notificationPodcastName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="Destiny the Show"
+        android:textColor="#000"
+        android:layout_below="@id/notificationEpisodeName"
+        android:layout_toRightOf="@id/episodeNotficationImageView"
+        android:paddingStart="8dp"
+        android:paddingTop="4dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="4dp"
+        />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:background="#000000"
+        android:layout_below="@id/notificationPodcastName"
+        android:layout_toRightOf="@id/episodeNotficationImageView"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/notificationPodcastName"
+        android:layout_toRightOf="@id/episodeNotficationImageView"
+        android:gravity="center_horizontal"
+        >
+
+        <ImageButton
+            android:id="@+id/notificationPlayPauseButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:src="@android:drawable/ic_media_play"
+            />
+
+        <ImageButton
+            android:id="@+id/closeNotificationButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_close_clear_cancel"/>
+    </LinearLayout>
+
+
+
+
+</RelativeLayout>
