--- a/DestinyCasts/app/src/main/res/layout/activity_choose_intro.xml
+++ b/DestinyCasts/app/src/main/res/layout/activity_choose_intro.xml
@@ -18,20 +18,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        style="?android:attr/buttonBarStyle">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/choose_select_all"
-            android:onClick="selectAllPodcasts"/>
+            android:onClick="selectAllPodcasts"
+            style="?android:attr/buttonBarButtonStyle"/>
 
         <Button
             android:id="@+id/continueButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/choose_continue"
-            android:onClick="finishOnboarding"/>
+            android:onClick="finishOnboarding"
+            android:clickable="false"
+            style="?android:attr/buttonBarButtonStyle"/>
 
     </LinearLayout>
 
