Item Detail now loads a fragment at every resolution. Doesn't crash when swithching orientation

--- a/DestinyCasts/app/src/main/res/layout/activity_episode.xml
+++ b/DestinyCasts/app/src/main/res/layout/activity_episode.xml
@@ -21,6 +21,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_episode" />
+    <FrameLayout
+        android:id="@+id/player_detail_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
