WIP work on item select
Recylcler view makes this very difficult. Settle for material click animation for now.

--- a/DestinyCasts/app/src/main/res/layout/episode_list_view.xml
+++ b/DestinyCasts/app/src/main/res/layout/episode_list_view.xml
@@ -5,7 +5,9 @@
         android:id="@+id/episodeContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/episode_touch_selector"
+        >
 
         <ImageView
             android:id="@+id/episodeImageView"
