--- a/DestinyCasts/app/src/main/res/layout/fragment_weekly_list.xml
+++ b/DestinyCasts/app/src/main/res/layout/fragment_weekly_list.xml
@@ -4,7 +4,9 @@
     android:id="@+id/recyclerview_episodes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    style="@style/episode_list_selected"
+    >
 
 
 
