--- a/DestinyCasts/app/src/main/res/layout-w700dp/activity_weekly_list.xml
+++ b/DestinyCasts/app/src/main/res/layout-w700dp/activity_weekly_list.xml
@@ -37,7 +37,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:baselineAligned="false"
-        android:layout_marginTop="110dp">
+        android:layout_marginTop="@dimen/weeklyList_tablet_layout_marginTop">
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefreshLayout"
