--- a/DestinyCasts/app/src/main/res/layout/activity_choose_intro.xml
+++ b/DestinyCasts/app/src/main/res/layout/activity_choose_intro.xml
@@ -6,6 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="me.noahpatterson.destinycasts.ChooseIntroActivity"
     android:orientation="vertical">
@@ -44,10 +46,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/podcastGridView"
 
-        android:columnWidth="150dp"
+        android:columnWidth="@dimen/choose_gridview_columnWidth"
         android:numColumns="auto_fit"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
+        android:verticalSpacing="@dimen/choose_gridview_verticalSpacing"
+        android:horizontalSpacing="@dimen/choose_gridview_horizontalSpacing"
         android:stretchMode="columnWidth"
         android:gravity="center"
         />
