--- a/DestinyCasts/app/src/main/res/layout/player_notification.xml
+++ b/DestinyCasts/app/src/main/res/layout/player_notification.xml
@@ -3,17 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#999"
+    android:background="@color/notification_background"
 
     >
 
     <ImageView
         android:id="@+id/episodeNotficationImageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/notification_image_width"
+        android:layout_height="@dimen/notification_image_height"
         android:scaleType="centerCrop"
         android:contentDescription="@string/episode_image"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         tools:src="@drawable/destiny_the_show"/>
 
 
@@ -22,12 +22,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="April update is upon us"
-        android:textColor="#000"
-        android:layout_toRightOf="@id/episodeNotficationImageView"
-        android:paddingStart="8dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="8dp"
-        android:textSize="18sp"
+        android:textColor="@color/notification_episodeName"
+        android:layout_toEndOf="@id/episodeNotficationImageView"
+        android:paddingStart="@dimen/default_spacing"
+        android:paddingTop="@dimen/default_spacing"
+        android:paddingEnd="@dimen/default_spacing"
+        android:textSize="@dimen/notification_episodeName_textSize"
         />
 
     <TextView
@@ -35,26 +35,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Destiny the Show"
-        android:textColor="#000"
+        android:textColor="@color/notification_podcastName"
         android:layout_below="@id/notificationEpisodeName"
-        android:layout_toRightOf="@id/episodeNotficationImageView"
-        android:paddingStart="8dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="8dp"
-        android:paddingBottom="4dp"
+        android:layout_toEndOf="@id/episodeNotficationImageView"
+        android:paddingStart="@dimen/default_spacing"
+        android:paddingTop="@dimen/half_default_spacing"
+        android:paddingEnd="@dimen/default_spacing"
+        android:paddingBottom="@dimen/half_default_spacing"
         />
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="1dip"
-        android:background="#000000"
+        android:layout_height="@dimen/notification_divider_height"
+        android:background="@color/notification_divider"
         android:layout_below="@id/notificationPodcastName"
-        android:layout_toRightOf="@id/episodeNotficationImageView"/>
+        android:layout_toEndOf="@id/episodeNotficationImageView"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/notificationPodcastName"
-        android:layout_toRightOf="@id/episodeNotficationImageView"
+        android:layout_toEndOf="@id/episodeNotficationImageView"
         android:gravity="center_horizontal"
         >
 
